# multicore_project

./: CMakeLists.txt  main.cpp  utils.cpp  utils.h
cmake/: FindSQLite3.cmake
load_sqlite/: load_sqlite.cpp  load_sqlite.h
models/: Candle.cpp  Candle.h  CandlestickTechnique.cpp  CandlestickTechnique.h  Company.cpp  Company.h  Day.cpp  Day.h
models/raw_models/: RawCompany.cpp  RawCompany.h  RawDate.cpp  RawDate.h  RawPrice.cpp  RawPrice.h
openmp_tests/: headers.h  hello_world.cpp  pi.cpp
utils/: candles_store.h  find_technique.cpp  find_technique.h  load_data.cpp  load_data.h  manipulate_data.cpp  manipulate_data.h  raw_data.cpp  raw_data.h
